demo_hcl/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: local
      http:
        paths:
          - path: /patients/?(.*)
            pathType: Prefix
            backend:
              service:
                name: patient-service
                port:
                  number: 3000

          - path: /appointments/?(.*)
            pathType: Prefix
            backend:
              service:
                name: appointment-service
                port:
                  number: 3000
